--- a/index.html
+++ b/index.html
@@ -177,146 +177,15 @@
           </div>
           <article>
                <h1>Chapter 1</h1>
-               <p>They were a bad match. Kari had knew that when she first met the other members of her group. They had
-                    all hail from other
-                    regions of the land
-                    for a
-                    long expedition. Their quest was to explore the unknown jungle that flourished in the deep crater
-                    of the land. The
-                    crater
-                    was located
-                    in the middle of all four regions. Untamed and untouched by any hint of civilization. It had been
-                    a
-                    month
-                    since
-                    they have explored the region together and they have yet yielded any significant discovery except
-                    extending the
-                    topography.
-                    The group composed of a representative from each major region of the world, each of them are a hand
-                    chosen
-                    talent who is
-                    picked among many to be part of this group. With that honor, came a sense of superiority. Each of
-                    them
-                    developed had a distinct character, and their personality clashed on a daily basis.
-               </p>
+               <p>They were a bad match. Kari had knew that when she first met the other members of her group. They had all hail from other regions of the land for a long expedition. Their quest was to explore the unknown jungle that flourished in the deep crater of the land. The crater was located in the middle of all four regions. Untamed and untouched by any hint of civilization. It had been a month since they have explored the region together and they have yet yielded any significant discovery except extending the topography. The group composed of a representative from each major region of the world, each of them are a hand chosen talent who is picked among many to be part of this group. With that honor, came a sense of superiority. Each of them had developed had a distinct character, and their personality clashed on a daily basis.</p>
                <br />
-               <p>Viv was the other young woman the group, who came from the southern region. While they were both
-                    female, the
-                    similarities ends
-                    there. Where as Kari preferred planing for her action in advance, Viv base her on actions on
-                    instincts without
-                    any
-                    basis
-                    or
-                    reasoning. In Kari's opinion, what makes Viv hard to deal with is her spontaneity and selfishness.
-                    Just a week ago Viv
-                    lead
-                    them down
-                    the
-                    path
-                    that was treacherous to all but most lithe human, namely only Viv herself. “A short cut” the
-                    light-footed girl casually
-                    remarked
-                    as she
-                    leap
-                    from one foothold to another as Kari “almost slip” far too many times trying to catch up. In
-                    the end
-                    Kari and
-                    the
-                    others demanded that Viv find them a safer route, but not before receiving a look from Viv. Kari
-                    recognized that look, it
-                    was the
-                    look
-                    you give to other people when you see them as incompetent. But what really drew the line between
-                    the two
-                    young woman, was when Viv decided to
-                    make
-                    Kari her
-                    mark. Kari had a necklace given to her by mother on her birthday. Viv had her cat-like eyes on it,
-                    the
-                    moment
-                    they
-                    met. Just a couple days ago, the necklace vanish during her sleep. With only the four of them in
-                    the
-                    middle
-                    of
-                    nowhere, it narrows the list of suspect down to three with only one of them hailing from a nation
-                    where
-                    kleptomania
-                    as a common known trait among their people.</p>
+               <p>Viv was the other young woman the group, who came from the southern region. While they were both female, the similarities ends there. Where as Kari preferred planing for her action in advance, Viv base her on actions on instincts without any basis or reasoning. In Kari's opinion, what makes Viv hard to deal with is her spontaneity and selfishness. Just a week ago Viv lead them down the path that was treacherous to all but most lithe human, namely only Viv herself. “A short cut” the swift girl casually remarked as she leap from one foothold to another as Kari “almost slip” far too many times trying to catch up. In the end Kari and the others demanded that Viv find them a safer route, but not before receiving a look from Viv. Kari recognized that look, it was the look you give to other people when you see them as incompetent. But what really drew the line between the two young woman, was when Viv decided to make Kari her mark. Kari had a necklace given to her by her mother on her birthday. Viv had her cat-like eyes on it, the moment they met. Just a couple days ago, the necklace vanish during her sleep. With only the four of them in the middle of nowhere, it narrows the list of suspect down to three with only one of them hailing from a nation where kleptomania was a common known trait among their people.</p>
                <br />
-               <p>Arnold was the representative from the west and also the foreman and in charge of their supplies.
-                    From the start, he had
-                    ordered
-                    the
-                    others as if they were in the military corp. What he failed to understand in Kari’s opinion was
-                    none of them
-                    came
-                    from
-                    Military. None of them responds well with bellowing and spit droplets landing on their face when
-                    he
-                    Came just an inch to their face. Now that Kari thought about it perhaps all this growling and chest
-                    pounding was
-                    needed
-                    For the man to vent, as Arnold had never resorted to physical force with any of them, but it was
-                    certainly not by choice. While he had the ability to do so, Arnold
-                    was
-                    given
-                    specific instructions that he was not to harm any of the members to risk international conflict.
-                    They
-                    all
-                    were
-                    instructed the same, they must avoid conflict at all cost. There was a time Kari questioned his
-                    leadership in front of the others, and she could see it took every strain
-                    of
-                    muscle
-                    on Arnold’s
-                    body to hold back the urge to resort to violence, which she does not doubt is second nature to him.
-                    Kari
-                    was
-                    not
-                    Afraid,
-                    all she saw was a overbearingly man, whose only methodology was using force to get obedience. It
-                    seem
-                    that
-                    today
-                    his energy was focus on the final member Garret for slacking off on his camp duty.</p>
+               <p>Arnold was the representative from the west and also the foreman and in charge of their supplies. From the start, he had ordered the others as if they were in the military corp. What he failed to understand in Kari’s opinion was none of them came from military. None of them responds well with bellowing and spit droplets landing on their face when he came just an inch to their face. Now that Kari thought about it perhaps all this growling and chest pounding was needed for the man to vent, as Arnold had never resorted to physical force with any of them, but it was certainly not by choice. While he had the ability to do so, Arnold was given specific instructions that he was not to harm any of the members to risk international conflict. They all were instructed the same, they must avoid conflict at all cost. There was a time Kari questioned his leadership in front of the others, and she could see it took every strain of muscle on Arnold’s body to hold back the urge to resort to violence, which she does not doubt is second nature to him. Kari was not afraid, all she saw was a overbearingly man, whose only methodology was using force to get obedience. It seem that today his energy was focus on the final member Garret for slacking off on his camp duty.</p>
                <br />
-               <p>Garret, the representative from the East, just shrug when Arnold berated him. To Garret the larger
-                    man must seem like a cage beast behind bars. Garret was the apathic one, in Kari’s opinion. While the
-                    other two members had a strong personality, there was in fact, such a thing as being too passive.
-                    Kari
-                    could
-                    not
-                    figure out what the lanky man’s thoughts were as she worked with him. Garret was indeed a savant at
-                    mapping, but his
-                    social
-                    decorum
-                    were
-                    that of a hermit. There was one time when Kari was taking care of her business in a fair distance
-                    from camp. The man walk by, stared at her a moment, nodded to her, and walked off as if nothing
-                    eventful had happen. Even to this day Kari did not know what to make of that, or how should she
-                    have dealt with the matter as she blushed at the memory.</p>
+               <p>Garret, the representative from the East, just shrug when Arnold berated him. To Garret the larger man must seem like a cage beast behind bars. Garret was the apathic one, in Kari’s opinion. While the other two members had a strong personality, there was in fact, such a thing as being too passive. Kari could not figure out what the lanky man’s thoughts were as she worked with him. Garret was indeed a savant at mapping, but his social decorum were that of a hermit. There was one time when Kari was taking care of her business in a fair distance from camp. The man walk by, stared at her a moment, nodded to her, and walked off as if nothing eventful had happen. Even to this day Kari did not know what to make of that, or how should she have dealt with the matter as she blushed at the memory.</p>
                <br />
-               <p>All three of them had an ego, and Kari knows that she had one also. Arrogant, judgemental, and
-                    obsessive
-                    is
-                    what
-                    her colleague had described her none too discreetly behind her back. She was aware of her flaw, and
-                    was
-                    trying
-                    to
-                    repress her nature for the sake of teamwork. That however, could not be applied to the rest of her
-                    team
-                    mates.
-                    With
-                    each passing day with only each other as company. She was convinced that one of them was going to
-                    secretly
-                    smoother
-                    them in
-                    their sleep and report it as an accident. If she has to endure this misfit’s company for another
-                    month, she may be the one that does the deed to end this journey.
-               </p>
+               <p>All three of them had an ego, and Kari knows that she had one also. Arrogant, judgemental, and obsessive is what her colleague had described her none too discreetly behind her back. She was aware of her flaw, and was trying to repress her nature for the sake of teamwork. That however, could not be applied for the rest of her teammates. With each passing day with only each other as company. She was convinced that one of them was going to secretly smother them in their sleep and report it as an accident. If she has to endure this misfit’s company for another month, she may be the one that does the deed to end this journey.</p>
           </article>
      </section>
 
