--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
      </nav>
 
-     <header class="header" id="header">
+     <header>
           <center>
                <img class="title" src="images/header.png">
                <h2>“If the book is true, it will find an audience that is meant to read it.”</h2>
@@ -259,12 +259,14 @@
      <i class="fab fa-google-plus-g fa-2x"></i>&nbsp;
      <i class="fab fa-whatsapp fa-2x"></i>&nbsp;
      <i class="fas fa-share-alt-square fa-2x"></i>
+
      <!-- Action link -->
      <div class="purchase" id="purchase">
           <h2>Purchase the full story</h2>
           <a class="btn btn-secondary" href="#">E-book $4.99</a>
           <a class="btn btn-secondary" href="#">Paper book $9.99</a>
      </div>
+
      <!-- Footer -->
      <footer>
           <footer class="py-3" style="background-color:rgba(0, 0, 0, 0.75);">
