--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
      <!-- Contact Form -->
      <div class="row">
           <center>
-               <div class="col-lg-8 mb-4">
+               <div class="col-lg-8 mb-4 mx-auto">
                     <h1>Send James a Message</h1>
                     <form name="sentMessage" id="contactForm" novalidate>
                          <div class="control-group form-group">
